--- a/public/css/siteindex.css
+++ b/public/css/siteindex.css
@@ -68,9 +68,7 @@ html, body
     height: 250px ;
     margin-top: 5%;
     background: rgba(253, 223, 223, 0.03);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
+    box-shadow: 0 4px 5px 5px rgba(0, 0, 0, 0.1);
     border: 1px solid rgba(148, 146, 146, 0.03);
     border-radius: 16px;
     color: #fff;
