--- a/public/css/siteindex.css
+++ b/public/css/siteindex.css
@@ -16,19 +16,21 @@ html, body
 .headercontainer{
 
     width: 100%;
-    height: 5rem ;
+    height: 90px ;
     box-sizing: border-box;
     overflow: hidden;
     border-bottom: 1px solid  rgba(155, 152, 152, 0.1);
     display: flex;
     flex-wrap: wrap;
- 
     justify-content: space-around;
-    padding-top: 25px;
+    
     color: #fff;
 }
 .headerlogo{
-    width: 175px;
+    width: 200px;
+    height: 90px;
+    text-align: center;
+    
 }
 
 
@@ -164,9 +166,9 @@ html, body
   
   .footer-dark .item.social > a {
     font-size:20px;
-    width:36px;
-    height:36px;
-    line-height:36px;
+    width:20px;
+    height:20px;
+    line-height:20px;
     display:inline-block;
     text-align:center;
     border-radius:50%;
