--- a/public/css/siteindex.css
+++ b/public/css/siteindex.css
@@ -2,7 +2,8 @@
 {
 	padding: 0px;
 	margin: 0px;
-}
+  font-family: 'Roboto', sans-serif;
+  }
 
 html, body
 {
@@ -35,7 +36,7 @@ html, body
     }
 
 .headermenu{
-  width: 200px;
+  width: 300px;
   height: 90px;
   box-sizing: border-box;
   text-align: center;
@@ -83,13 +84,38 @@ html, body
     margin-top: 5%;
     background: rgba(253, 223, 223, 0.03);
     box-shadow: 0 4px 5px 5px rgba(0, 0, 0, 0.1);
-    border: 1px solid rgba(148, 146, 146, 0.03);
+    border: 1px solid rgba(184, 174, 174, 0.1);
     border-radius: 16px;
     color: #fff;
     text-align: center;
 
 }
 
+.aboutcontainer{
+  width: 100%;
+  height: 25%;
+  color: #fff;
+  margin-top: 5%;
+  text-align: center;
+  /* justify-content: space-around; */
+  box-sizing: border-box;
+  /* display: block; */
+}
+
+.aboutcontainer h1{
+  font-size: 75px;
+}
+
+.aboutcontainer p{
+  font-size: 40px;
+}
+
+.moldurasab{
+  display: inline;
+  width: 182px;
+  height: 182px;
+  flex-wrap: nowrap;
+}
 
 
 
