--- a/public/css/siteindex.css
+++ b/public/css/siteindex.css
@@ -1,3 +1,14 @@
+
+/* LEIA-ME LEIA-ME LEIA-ME LEIA-ME LEIA-ME LEIA-ME LEIA-ME LEIA-ME LEIA-ME LEIA-ME LEIA-ME LEIA-ME LEIA-ME LEIA-ME LEIA-ME LEIA-ME 
+
+A todos  lendo esse css, esse css é responsavel por todas as paginas pois eu fiquei com preguiça de fazer um para cada, mas todas as seções
+estão devidamente documentadas e separadas basta procurar a seção que desejar e altera-la, e sinta-se livre para organizar e dividir o css 
+para cada página!
+*/
+
+
+
+
 *
 {
 	padding: 0px;
@@ -148,12 +159,22 @@ html, body
 
 .title02{
   width: 100%;
-  margin-top: 5%;
   color: #fff;
   font-size: 140%;
   text-align: center;
 }
 
+.subm1{
+  width: 100%;
+  color: #fff;
+  text-align: center;
+  margin-top: 5%;
+  font-size: 30px;
+}
+
+.title02 h1{
+  margin-bottom: 5%;
+}
 
 
 /* Hero section */
