contact session started

--- a/public/css/siteindex.css
+++ b/public/css/siteindex.css
@@ -177,6 +177,19 @@ html, body
 }
 
 
+.contactform h1{
+   color: #fff;
+   text-align: center;
+   margin-top: 5%;
+   margin-bottom: 5%;
+}
+
+.contactform{
+  width: 50%;
+  color: #fff;
+}
+
+
 /* Hero section */
 
 
