--- a/public/css/siteindex.css
+++ b/public/css/siteindex.css
@@ -190,6 +190,34 @@ html, body
 }
 
 
+.inputsabt{
+  width: 90%;
+  display: block;
+  margin: 0 auto;
+  color: #fff;
+  height: 52px;
+  font-size: 25px;
+}
+.inputabtcss{
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  font-size: 18px;
+}
+.inputtextarea{
+  background: rgba(71, 71, 71, 0.2);
+  border: none;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  font-size: 18px;
+  resize: vertical;
+  height: 200px;
+}
+
+.btnabt{
+  margin-top: 1%;
+  margin-left: 4.4%;
+}
+
 /* Hero section */
 
 
@@ -205,7 +233,7 @@ html, body
     
     text-align:center;
     padding-bottom:20px;
-    margin-top: 25%;
+    margin-top: 10%;
     border-top: 2px solid  rgba(155, 152, 152, 0.1);
   }
 
