--- a/public/css/profs.css
+++ b/public/css/profs.css
@@ -87,7 +87,32 @@ html, body
 
 }
 
+.contprof{
+  width: 150px;
+  height: 150px;
+  box-sizing: border-box;
+  border: 1px solid rgb(2, 2, 2);
+  border-radius: 100%;
+  margin-left: 20%;
+  background-image: url('../images/lmprof.jpg');
+  background-size: 150px 150px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 
+.profinfos{
+  width: 100%;
+  height: 40%;
+  background: #fff;
+  color: #000000;
+  font-size: 10px;
+  text-align: left;
+
+}
+
+.profinfos a{
+  text-decoration: none;
+}
 
 
 
