--- a/public/css/profs.css
+++ b/public/css/profs.css
@@ -98,20 +98,23 @@ html, body
   background-size: 150px 150px;
   background-repeat: no-repeat;
   background-position: center;
+  margin-top: 2%;
+  margin-bottom: 5%;
 }
 
 .profinfos{
   width: 100%;
   height: 40%;
-  background: #fff;
-  color: #000000;
+  background: transparent;
+  color: #ffffff;
   font-size: 10px;
   text-align: left;
-
+  
 }
 
 .profinfos a{
   text-decoration: none;
+  color: #ffffff;
 }
 
 
