--- a/public/css/siteindex.css
+++ b/public/css/siteindex.css
@@ -242,6 +242,35 @@ html, body
   transition: 0.3s;
 }
 
+.formabt {
+  font-size: 40px;
+}
+
+.formabt select {
+  font-size: 30px;
+}
+
+.btnp{
+  margin-left: 13%;
+  background: #535353 !important;
+  border-color: #919191 !important;
+  color: #fff;
+  cursor: pointer;
+  padding: 12px 16px;  
+  border-width: 1px;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: 400;
+  box-shadow: 0px 10px 20px -6px rgba(0, 0, 0, 0.12);
+  position: relative;
+  margin-bottom: 20px;
+  transition: 0.3s;
+}
+
+.formp{
+  margin-bottom: 2%;
+}
+
 /* Hero section */
 
 
