css profs ajustado e listagem do bd funcionando

--- a/public/css/profs.css
+++ b/public/css/profs.css
@@ -107,8 +107,9 @@ html, body
   height: 40%;
   background: transparent;
   color: #ffffff;
-  font-size: 10px;
+  font-size: 9px;
   text-align: left;
+  padding-top: 20%;
   
 }
 
