--- a/public/css/profs.css
+++ b/public/css/profs.css
@@ -94,7 +94,7 @@ html, body
   border: 1px solid rgb(2, 2, 2);
   border-radius: 100%;
   margin-left: 20%;
-  background-image: url('../images/lmprof.jpg');
+  background-image: url('../images/user2.png');
   background-size: 150px 150px;
   background-repeat: no-repeat;
   background-position: center;
