--- a/public/css/siteindex.css
+++ b/public/css/siteindex.css
@@ -7,7 +7,7 @@ para cada página!
 */
 
 
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;900&display=swap');
 
 *
 {
@@ -274,7 +274,121 @@ html, body
 /* Hero section */
 
 
+/* form registro section */
 
+/* .regiscontainer {
+  position: relative;
+  width: 350px;
+  height: 500px;
+  border-radius: 20px;
+  padding: 40px;
+  box-sizing: border-box;
+  background: #272727;
+  box-shadow: 14px 14px 20px #ffffff, -14px -14px 20px #969696;
+  margin-top: 5%;
+}
+
+
+
+.fa-facebook-f {
+  font-size: 80px;
+  color: white;
+  margin-top: 10px;
+}
+
+.brand-title {
+  margin-top: 10px;
+  font-weight: 900;
+  font-size: 2.5rem;
+  color: #f7f7f7;
+  letter-spacing: 1px;
+  text-align: center;
+}
+
+.inputs {
+  text-align: left;
+  margin-top: 15%;
+}
+
+label {
+  display: block;
+  width: 100%;
+  padding: 0;
+  border: none;
+  outline: none;
+  box-sizing: border-box;
+  color: white;
+}
+
+input,
+button {
+  display: block;
+  width: 100%;
+  padding: 0;
+  border: none;
+  outline: none;
+  box-sizing: border-box;
+}
+
+label {
+  margin-bottom: 4px;
+}
+
+label:nth-of-type(2) {
+  margin-top: 12px;
+}
+
+input::placeholder {
+  color: rgb(0, 0, 0);
+}
+
+input {
+  background: #e7e7e7;
+  padding: 10px;
+  padding-left: 20px;
+  height: 50px;
+  font-size: 14px;
+  border-radius: 50px;
+  box-shadow: inset 6px 6px 6px #ffffff, inset -6px -6px 6px #ffffff;
+}
+
+button {
+  margin-top: 20px;
+  
+  height: 40px;
+  border-radius: 20px;
+  cursor: pointer;
+  font-weight: 900;
+  background: #979797;
+  box-shadow: 16px 16px 32px #686868,
+      -16px -16px 32px #363636;
+  color: rgb(0, 0, 0);
+  transition: 0.5s;
+}
+
+button:hover {
+  box-shadow: none;
+}
+
+
+
+h1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+
+
+ */
+
+
+
+
+
+
+
+/* End Form registro section */
 
 /* Footer section */
 
